# ComputerVision

./: README.md
Labs/: CMakeLists.txt  README.md
Labs/01/: CMakeLists.txt  Commands  Task01.cpp  Task02.cpp  Task06.cpp  lab01_task03.cpp  lab01_task04.cpp  lab01_task05.cpp
Labs/02/: CMakeLists.txt  lab02_task01.cpp  lab02_task02.cpp  lab02_task02_func.cpp  lab02_task02_func.h  lab02_task03.cpp  lab02_task03_func.cpp  lab02_task03_func.h  lab02_task04.cpp  lab02_task05.cpp
Labs/03/: CMakeLists.txt  lab03_task01.cpp  lab03_task02.cpp  lab03_task03.cpp  lab03_task04.cpp  lab03_task05.cpp
Labs/04/: CMakeLists.txt  README.txt  lab04_task01.cpp  lab04_task02.cpp
Labs/04/docs/: report.txt
Labs/04/headers/: lab04_tasks.hpp
Labs/04/src/: CMakeLists.txt  lab04_main.cpp  lab04_task01.cpp  lab04_task02.cpp  lab04_task02_Slope.cpp  lab04_task03.cpp  lab04_task04.cpp
Labs/05/: CMakeLists.txt  README.txt
Labs/05/docs/: Report.txt  task01_ideas.txt
Labs/05/headers/: lab05_tasks.hpp
Labs/05/src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  lab05_main.cpp  lab05_task01.cpp  lab05_task02.cpp  lab05_task03.cpp
Labs/06/: CMakeLists.txt
Labs/06/headers/: lab06_tasks.hpp
Labs/06/src/: CMakeLists.txt  lab06_main.cpp  lab06_task01.cpp
Labs/07/: CMakeLists.txt
Labs/07/headers/: image_stiching.hpp
Labs/07/src/: CMakeLists.txt  image_stiching.cpp  lab07_main.cpp  panoramic_utils.cpp
Labs/08/: CMakeLists.txt
Labs/08/headers/: lab08_tasks.hpp
Labs/08/src/: CMakeLists.txt  lab08_main.cpp  lab08_tasks.cpp
Tests/BilateralFilterTuning/: CMakeLists.txt
Tests/BilateralFilterTuning/src/: main.cpp  tunableBilateral.cpp
Tests/ProjectSegmentation/: CMakeLists.txt
Tests/ProjectSegmentation/headers/: handSegmentationSupport.hpp  tunableBilateral.hpp
Tests/ProjectSegmentation/src/: handSegmentationSupport.cpp  main.cpp  tunableBilateral.cpp
